Added category admin module with crud facility

--- a/admin/script/package.json
+++ b/admin/script/package.json
@@ -1,9 +1,10 @@
 {
-    "dependencies": {
-    	"gulp": "*",
-        "gulp-jshint": "*",
-        "gulp-uglify": "*",
-        "gulp-concat": "*",
-		"del": "*"
-    }
+  "dependencies": {
+    "gulp": "*",
+    "gulp-jshint": "*",
+    "gulp-uglify": "*",
+    "gulp-concat": "*",
+    "gulp-print": "~1.1.0",
+    "del": "*"
+  }
 }
