--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,14 @@
     },
 	"autoload": {
 		"files":[
-			"vendor/twig/twig/lib/Twig/Autoloader.php",
 			"lib/files/lib_functions.php",
 			"config/app_config.php",
-			"config/app_config.php",
-			"lib/files/register_twig.php"
+			"config/db_config.php"
 		],
 		"classmap": [
 			"lib/thincms/src/entities",
-			"lib/thincms/src/services"
+			"lib/thincms/src/services",
+			"lib/database"
 		]
 	}
 }
